<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="season.nfl.nflseasoncalculatorapp.fragments.SeasonFragment">

    <!-- TODO: Update blank fragment layout -->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/loadSeasonButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/load_regular_season" />

            <LinearLayout
                android:id="@+id/seasonOperationLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="invisible">

                <LinearLayout
                    android:id="@+id/viewWeekLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/textView"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/view_week" />

                    <Spinner
                        android:id="@+id/pickWeekSpinner"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1" />

                    <Button
                        android:id="@+id/viewWeekButton"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:text="@string/view" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/weekLayout"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical"
                    android:visibility="gone">

                    <TextView
                        android:id="@+id/weekNumberLabel"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="TextView" />

                    <TableLayout
                        android:id="@+id/weekTable"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">

                        <TableRow
                            android:id="@+id/weekLabelsRow"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/awayLabel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/away_team" />

                            <TextView
                                android:id="@+id/homeLabel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="8dp"
                                android:text="@string/home_team" />

                            <TextView
                                android:id="@+id/winnerLabel"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:paddingLeft="8dp"
                                android:text="@string/winner" />
                        </TableRow>

                    </TableLayout>

                </LinearLayout>

                <Button
                    android:id="@+id/simulateSeasonsButton"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/simulate_seasons" />

                <ProgressBar
                    android:id="@+id/seasonProgress"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone" />

                <HorizontalScrollView
                    android:id="@+id/simulateScroll"
                    android:layout_width="match_parent"
                    android:layout_height="350dp"
                    android:visibility="invisible">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TableLayout
                            android:id="@+id/simulateSeasonsLabelTable"
                            android:layout_width="wrap_content"
                            android:layout_height="40dp">
                            <TableRow
                                android:id="@+id/simulateSeasonsLabels"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content">

                                <TextView
                                    android:id="@+id/teamLabel"
                                    android:layout_width="90dp"
                                    android:layout_height="wrap_content"
                                    android:text="@string/select_team_short" />

                                <TextView
                                    android:id="@+id/averageWinsLabel"
                                    android:layout_width="60dp"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="8dp"
                                    android:text="@string/average_wins" />

                                <TextView
                                    android:id="@+id/averageLossesLabel"
                                    android:layout_width="60dp"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="8dp"
                                    android:text="@string/average_losses" />

                                <TextView
                                    android:id="@+id/bottomLabel"
                                    android:layout_width="60dp"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="8dp"
                                    android:text="@string/bottom_5_label" />

                                <TextView
                                    android:id="@+id/divisionCellarLabel"
                                    android:layout_width="60dp"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="8dp"
                                    android:text="@string/division_cellar_label" />

                                <TextView
                                    android:id="@+id/winningSeasonLabel"
                                    android:layout_width="60dp"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="8dp"
                                    android:text="@string/winning_season_label" />

                                <TextView
                                    android:id="@+id/playoffsLabel"
                                    android:layout_width="60dp"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="8dp"
                                    android:text="@string/playoff_label" />

                                <TextView
                                    android:id="@+id/divisionChampLabel"
                                    android:layout_width="60dp"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="8dp"
                                    android:text="@string/division_champion_label" />

                                <TextView
                                    android:id="@+id/roundOneByeLabel"
                                    android:layout_width="60dp"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="8dp"
                                    android:text="@string/round_one_bye_label" />

                                <TextView
                                    android:id="@+id/oneSeedLabel"
                                    android:layout_width="60dp"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="8dp"
                                    android:text="@string/one_seed_label" />

                                <TextView
                                    android:id="@+id/divisionRoundLabel"
                                    android:layout_width="60dp"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="8dp"
                                    android:text="@string/divisional_label" />

                                <TextView
                                    android:id="@+id/conferenceRoundLabel"
                                    android:layout_width="60dp"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="8dp"
                                    android:text="@string/conference_label" />

                                <TextView
                                    android:id="@+id/conferenceChampLabel"
                                    android:layout_width="60dp"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="8dp"
                                    android:text="@string/conference_champ_label" />

                                <TextView
                                    android:id="@+id/superBowlLabel"
                                    android:layout_width="60dp"
                                    android:layout_height="wrap_content"
                                    android:paddingLeft="8dp"
                                    android:text="@string/super_bowl_label" />
                            </TableRow>
                        </TableLayout>

                        <android.support.v4.widget.NestedScrollView
                            android:layout_width="match_parent"
                            android:layout_height="300dp"
                            android:visibility="visible">

                            <TableLayout
                                android:id="@+id/simulateSeasonsTable"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"></TableLayout>
                        </android.support.v4.widget.NestedScrollView>

                    </LinearLayout>
                </HorizontalScrollView>

            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>
